// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeightedResultBar should render correctly 1`] = `
<WeightedResultBar
  context="primary"
  count={123}
  isLoading={false}
  percentage={67}
>
  <div
    className="WeightedResultBar"
  >
    <div
      className="WeightedResultBar__details"
    >
      <Text
        context="default"
        inline={true}
        size="normal"
      >
        <span>
          Result
        </span>
      </Text>
      <Text
        context="default"
        inline={true}
        size="normal"
      >
        <span>
          123
        </span>
      </Text>
    </div>
    <ProgressBar
      animated={false}
      context="primary"
      hidden={false}
      percentage={67}
      small={true}
    >
      <div
        aria-hidden={false}
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow={67}
        className="ProgressBar ProgressBar--small"
        role="progressbar"
      >
        <div
          className="ProgressBar__fill ProgressBar__fill--context_primary ProgressBar__fill--small"
          style={
            Object {
              "width": "67%",
            }
          }
        />
      </div>
    </ProgressBar>
  </div>
</WeightedResultBar>
`;

exports[`WeightedResultBar should render correctly with a custom count 1`] = `
<WeightedResultBar
  context="primary"
  count={
    <p>
      456
    </p>
  }
  isLoading={false}
  percentage={67}
>
  <div
    className="WeightedResultBar"
  >
    <div
      className="WeightedResultBar__details"
    >
      <Text
        context="default"
        inline={true}
        size="normal"
      >
        <span>
          Result
        </span>
      </Text>
      <p>
        456
      </p>
    </div>
    <ProgressBar
      animated={false}
      context="primary"
      hidden={false}
      percentage={67}
      small={true}
    >
      <div
        aria-hidden={false}
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow={67}
        className="ProgressBar ProgressBar--small"
        role="progressbar"
      >
        <div
          className="ProgressBar__fill ProgressBar__fill--context_primary ProgressBar__fill--small"
          style={
            Object {
              "width": "67%",
            }
          }
        />
      </div>
    </ProgressBar>
  </div>
</WeightedResultBar>
`;
